fix: button spacing in about

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -163,9 +163,9 @@
     transform: scale(0.8);
   }
 
-  .button{
+  .buttonContainer{
+    margin-left: 0px;
     scale: 0.8;
-    padding: 10px 10px;
   }
 }
 
